fixed spacing and the button for the mobile version

--- a/css/index.css
+++ b/css/index.css
@@ -164,12 +164,18 @@ p {
   border-bottom: 1px double #e0e0e0;
   background: #f4f4f4;
   width: 100%;
+  padding: 10px 0;
 }
 .navigation .h1 {
   width: 100%;
-  padding: 0.5% 0;
+  padding: 1% 0;
   text-align: center;
   flex-direction: column;
+}
+@media (max-width: 500px) {
+  .navigation .h1 {
+    padding-bottom: 1.5%;
+  }
 }
 .navigation .h1 h1 {
   font-size: 4rem;
@@ -186,6 +192,11 @@ p {
   color: #454A59;
   font-size: 1.5rem;
 }
+@media (max-width: 500px) {
+  .navigation nav a {
+    padding: 0 3%;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -195,6 +206,10 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .main-header-img {
+  border-radius: 5px;
+  width: 100%;
 }
 .home .intro h2 {
   padding: 15px;
@@ -206,6 +221,18 @@ footer {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images {
+    justify-content: center;
+  }
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+  .home .space-images .blast {
+    width: 90%;
+  }
 }
 .home .space-images img {
   width: 28%;
@@ -229,11 +256,28 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 3.5%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text h3 {
+    padding-top: 3%;
+  }
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
@@ -254,15 +298,25 @@ footer {
   color: black;
 }
 @media (max-width: 500px) {
-  .home .walk .walk-text .btn .btn {
-    width: 90%;
-    height: 50px;
-    font-size: 2.5rem;
+  .home .walk .walk-text .btn {
+    background-color: #22283A;
+    width: 100%;
+    height: 70px;
+    font-size: 1.8rem;
+  }
+  .home .walk .walk-text .btn:hover {
+    color: #22283A;
   }
 }
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
